Fix alignment

--- a/src/components/PageLayout/ContactSection.module.css
+++ b/src/components/PageLayout/ContactSection.module.css
@@ -1,10 +1,3 @@
-/* .main {
-  display: flex;
-  flex-direction: column;
-  background-color: green;
-  width: 100%;
-} */
-
 .main {
   width: 70vw;
 }
@@ -26,7 +19,7 @@
 }
 
 .group1 span {
-  text-align: right;
+  /* text-align: right ; */
   font-size: 20px;
 }
 
@@ -36,6 +29,11 @@
   flex-direction: column;
   flex: 1;
   align-items: space-between;
+}
+
+.group1 > *,
+.group2 > * {
+  flex: 1;
 }
 
 .group1 h2 {
